--- a/src/App.css
+++ b/src/App.css
@@ -99,12 +99,18 @@ h1 {
 }
 
 .button-wrapper {
-  display: 'flex'; 
+  display: flex; 
   gap: 8;
   margin-top: 16px; 
+  margin-bottom: 16px; 
   justify-content: center;
 }
 
 .paggination-label {
   align-self: center;
+}
+
+.login {
+  display: flex;
+  align-items: end;
 }
